Fixed layout problem with sections on chrome

--- a/src/client/style/application.css
+++ b/src/client/style/application.css
@@ -44,6 +44,7 @@ ol li::before {
 
 .section {
     padding-bottom: 20px;
+    flex-shrink: 0;
 }
 
 .section.alternate {
